--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,27 @@
 {
-    "manifest_version": 2,
-    "name": "FocusEdu",
-    "version": "1.0",
-    "description": "Une extension pour bloquer les réseaux sociaux et se concentrer sur les sites éducatifs.",
-    "permissions": [
-      "tabs",
-      "webNavigation",
-      "storage"
-    ],
-    "background": {
-      "scripts": ["background.js"],
-      "persistent": false
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-      }
-    ],
-    "browser_action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "icon16.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
-      }
-    },
-    "icons": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
+  "manifest_version": 3,
+  "name": "Focus Edu",
+  "version": "1.0",
+  "description": "Pour se concentrer pleinement sur les cours 🧘",
+  "permissions": [
+    "tabs"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     }
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
-  
+}
